--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.18.1",
     "express-group-routes": "^1.1.0",
     "helmet": "^5.1.0",
+    "ip-whitelist": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.6",
     "validatorjs": "^3.22.1"
